<resources>
    <string name="app_name">4Flicks app</string>
    <string name="msgWel">Welcome to Meal Planner</string>
    <string name="br">Breakfast</string>
    <string name="lu">Lunch</string>
    <string name="di">Dinner</string>
    <string name="enBr">Enter Breakfast</string>
    <string name="enLu">Enter Lunch</string>
    <string name="Endi">Enter Dinner</string>
    <string name="addpl">Add Plan</string>
    <string name="viPlan">View Plans</string>
    <string name="msg1">Plan Your Meals Today</string>
    <string name="plnToday">Plan Today</string>
    <string name="btnCreate">Create Plan</string>
    <string name="btnView">View Plan</string>
    <string name="calIn">Calorie Intake :</string>
    <string name="day1">Day 1</string>
    <string name="btnEditPl">Update Plan</string>
    <string name="btnDelPl">Delete Plan</string>
    <string name="Tvday2">Day 2</string>
    <string name="btnFindbmi">Find Your BMI</string>
    <string name="btnCheckRec">Check your own recipes</string>
    <string name="btnPlanMeal">Plan Your Meals</string>
    <string name="btnChkGro">Check your grocery list</string>
    <string name="TvWelBestPlan">Welcome To BestPlan</string>
    <string name="valTapEd">Tap to edit</string>

    <!--strings of imashi's activities-->
    <string name="title1">BMI Calculator</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="title2">Stay Healthy</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title3">Day Plan</string>
    <string name="btnBMI">Calculate BMI</string>
    <string name="btnCompleted">Delete</string>
    <string name="title4">Add New Task</string>
    <string name="time">Select Time</string>
    <string name="taskView">Task</string>
    <string name="taskHint">Enter the task description</string>
    <string name="btnAddNewTask">Add Task</string>
    <string name="ageHInt">Enter Age</string>
    <string name="title5">Update Task</string>
    <string name="btnEdit">Save Task</string>
    <string name="appName">BestPlan</string>
    <string name="btnPlan">Plan the Day</string>
    <string name="btnDailyFitnessPlan">Daily Fitness Plan</string>
    <string name="timeHint">Time</string>
    <string name="taskDescriptionHint">Task description</string>
    <string name="tvTime">Time</string>

    <!--strings of Charmie's activities-->
    <string name="ToolBarTitle1">All Recipes</string>
    <string name="ToolBarTitle2">Create a Recipe</string>
    <string name="ToolBarTitle3">Edit Recipe</string>
    <string name="ToolBarTitle4">Recipe</string>
    <string name="tvWelcomeMeal">Welcome to Meal Planner</string>
    <string name="btnAddMealPlan">Add Meal Plan</string>
    <string name="btnCalorM">Calorie Calculator</string>
    <string name="hintenday">Enter Day</string>
    <string name="hintEnBr">Enter Breakfast</string>
    <string name="hintEnLu">Enter Lunch</string>
    <string name="hintEnDin">Enter Dinner</string>
    <string name="TvUpDte">Update Day</string>
    <string name="TvUpBr">Update Breakfast</string>
    <string name="TvUpLu">Update Lunch</string>
    <string name="TvUpDin">Update Dinner</string>
    <string name="btnUpMealP">Update Meal Plan</string>
    <string name="TvUpMlPl">Update Meal Plan</string>
    <string name="btnAdmeal">Add Meal</string>
    <string name="Tvcalocal">Calorie Calculator</string>
    <string name="btnCalCalo">Calculate</string>

    <!--strings of heli's activities-->
    <string name="grocery_list_title1">Grocery List</string>
    <string name="grocery_list_text1">Welcome to Grocery List</string>
    <string name="grocery_list_text2">Click Here to View Your Grocery List !!</string>
    <string name="grocery_list_title2">Add Grocery Item</string>
    <string name="grocery_add_name">Item Name</string>
    <string name="grocery_add_price">Price</string>
    <string name="grocery_add_quantity">Quantity</string>
    <string name="grocery_add_hint1">Enter Item Name</string>
    <string name="grocery_add_hint2">Enter Unit Price</string>
    <string name="grocery_add_hint3">Enter Quantity</string>
    <string name="grocery_add_btn">ADD</string>
    <string name="grocery_list_title3">My Grocery List</string>
    <string name="grocery_list_txt_tot_amount">Total Amount =</string>
    <string name="grocery_list_quantity_text">Quantity =</string>
    <string name="grocery_list_item_price_text">Unit Price (Rs.)</string>
    <string name="grocery_update_btn">UPDATE</string>
    <string name="grocery_delete_btn">DELETE</string>
    <string name="grocery_list_title4">Grocery Item</string>
    <string name="grocery_list_text_data">No Items, Start Adding Products</string>
    <string name="grocery_update_hint1">Item Name</string>
    <string name="grocery_update_hint2">Item Price</string>
    <string name="grocery_update_hint3">Item Quantity</string>

</resources>