<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomeMeal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9C0A"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="BestPlan"
        app:titleMarginStart="30dp"
        app:titleTextColor="#FFFFFF" />

    <Button
        android:id="@+id/planner"
        android:layout_width="153dp"
        android:layout_height="63dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="34dp"
        android:onClick="displayaddmeal2"
        android:text="@string/btnAddMealPlan"
        app:backgroundTint="@color/homeNavBtn"
        app:layout_constraintEnd_toStartOf="@+id/cal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/cal"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="35dp"
        android:onClick="displaycalorie"
        android:text="@string/btnCalorM"
        app:backgroundTint="@color/homeNavBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/planner"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tvWelcomeMeal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="262dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ml4" />
</androidx.constraintlayout.widget.ConstraintLayout>