<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceryListUpdateItem">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbUpdateGrocery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9C0A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/grocery_list_title4"
        app:titleMarginStart="60dp"
        app:titleTextColor="@color/white" />

    <ImageButton
        android:id="@+id/UpdateBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9C0A"
        android:onClick="displayGroceryList"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tbUpdateGrocery"
        app:layout_constraintStart_toStartOf="@+id/tbUpdateGrocery"
        app:layout_constraintTop_toTopOf="@+id/tbUpdateGrocery"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/groceryImage"
        android:layout_width="180dp"
        android:layout_height="189dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbUpdateGrocery"
        app:srcCompat="@drawable/itemgrocery" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputItemName2"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/groceryItemName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groceryItemName2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPrice2"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/groceryPrice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groceryPrice2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputQuantity2"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/groceryQuantity2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groceryQuantity2" />

    <TextView
        android:id="@+id/groceryItemName2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/grocery_add_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textInputItemName2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceryImage" />

    <TextView
        android:id="@+id/groceryPrice2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/grocery_add_price"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textInputPrice2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceryItemName2" />

    <TextView
        android:id="@+id/groceryQuantity2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/grocery_add_quantity"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textInputQuantity2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceryPrice2" />

    <Button
        android:id="@+id/groceryEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:backgroundTint="#FF7F00"
        android:text="@string/grocery_update_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/groceryDeleteBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/groceryDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#FF7F00"
        android:text="@string/grocery_delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/groceryEditBtn"
        app:layout_constraintTop_toBottomOf="@+id/textInputQuantity2" />

    <ImageView
        android:id="@+id/addItemImage2"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceryImage"
        app:srcCompat="@drawable/strawberry" />

    <ImageView
        android:id="@+id/addPriceImage2"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemImage2"
        app:srcCompat="@drawable/coins" />

    <ImageView
        android:id="@+id/addQuantityImage2"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPriceImage2"
        app:srcCompat="@drawable/scale" />



</androidx.constraintlayout.widget.ConstraintLayout>